# glsl-transpile

./: CMakeLists.txt
examples/: test.comp
src/: main.cpp
